--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -1,43 +1,286 @@
-﻿<Window x:Class="ToolScope.WPF.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ToolScope.WPF"
-        xmlns:hc="https://handyorg.github.io/handycontrol"
-        xmlns:vm="clr-namespace:ToolScope.WPF"
-        d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel}"
-        mc:Ignorable="d"
-        WindowStyle="None"
-        ResizeMode="CanResizeWithGrip"
-        MouseDown="Window_MouseDown"
-        Background="Transparent"
-        AllowsTransparency="True"
-        Title="MainWindow" d:Height="486" d:Width="935" Height="{Binding Height}" Width="{Binding Width}">
-    
-    <Border CornerRadius="25" BorderBrush="#FF322E37" BorderThickness="2" Padding="6" Background="#111012">
-        <Grid>
-            <Grid.RowDefinitions>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="13*"/>
-                <ColumnDefinition Width="173*"/>
-                <ColumnDefinition Width="598*"/>
-            </Grid.ColumnDefinitions>
-            <Grid Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Height="34" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,2,9,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="565*"/>
-                    <ColumnDefinition Width="136*"/>
-                </Grid.ColumnDefinitions>
-                <Button Click="CloseCommand" Background="#FF731414" BorderThickness="1" hc:BorderElement.CornerRadius="20" Height="34" Width="34" HorizontalAlignment="Right" Grid.Column="1" Padding="0" BorderBrush="#FF653636" VerticalAlignment="Top">
-                    <Image Source="/Ressources/close.png" Margin="7" RenderOptions.BitmapScalingMode="HighQuality" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </Button>
-            </Grid>
-            <Border Background="#FF141215" CornerRadius="20" BorderBrush="#FF29242B" BorderThickness="1" HorizontalAlignment="Left" Width="173" Grid.ColumnSpan="2" Margin="15,10,0,10">
-                <Image Source="/Views/ToolScope Banner.png"
-                   RenderOptions.BitmapScalingMode="HighQuality" Margin="9,9,9,0" Height="57" VerticalAlignment="Top"/>
+﻿<Window
+    x:Class="ToolScope.WPF.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:local="clr-namespace:ToolScope.WPF"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:vm="clr-namespace:ToolScope.WPF"
+    Title="MainWindow"
+    Width="{Binding Width}"
+    Height="{Binding Height}"
+    MinWidth="935"
+    MinHeight="486"
+    d:DataContext="{d:DesignInstance Type=local:MainWindowViewModel}"
+    d:Height="486"
+    d:Width="935"
+    AllowsTransparency="True"
+    Background="Transparent"
+    MouseDown="Window_MouseDown"
+    ResizeMode="CanResizeWithGrip"
+    WindowStyle="None"
+    mc:Ignorable="d">
 
+    <Border
+        Padding="6"
+        Background="#111012"
+        BorderBrush="#FF322E37"
+        BorderThickness="2"
+        CornerRadius="25">
+        <Grid>
+            <Grid.RowDefinitions />
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="13" />
+                <ColumnDefinition Width="222" />
+                <ColumnDefinition Width="17" />
+                <ColumnDefinition Width="667*" />
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="3" Grid.ColumnSpan="2">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="43" />
+                    <RowDefinition Height="427" />
+                </Grid.RowDefinitions>
+                <Button
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Width="24"
+                    Height="24"
+                    Margin="0,0,7,0"
+                    Padding="0"
+                    HorizontalAlignment="Right"
+                    hc:BorderElement.CornerRadius="20"
+                    Background="#FF731414"
+                    BorderBrush="#FF653636"
+                    BorderThickness="1"
+                    Click="CloseCommand">
+                    <Image
+                        Margin="5"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        Opacity="0.8"
+                        RenderOptions.BitmapScalingMode="HighQuality"
+                        Source="/Ressources/close.png" />
+                </Button>
+
+                <DockPanel Grid.Row="1">
+                    <ContentControl Content="" />
+                </DockPanel>
+
+                <TabControl
+                    Grid.Row="1"
+                    d:SelectedIndex="0"
+                    Background="#111012"
+                    BorderBrush="#111012"
+                    BorderThickness="0"
+                    Foreground="#111012"
+                    SelectedIndex="{Binding CurrentTab}">
+                    <TabItem Header="Dashboard" Visibility="Collapsed">
+                        <Grid x:Name="grid">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="70" />
+                                <RowDefinition Height="50" />
+                                <RowDefinition Height="50" />
+                                <RowDefinition Height="50" />
+                                <RowDefinition Height="50" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="100" />
+                                <ColumnDefinition Width="130" />
+                                <ColumnDefinition Width="150" />
+                                <ColumnDefinition Width="130" />
+                                <ColumnDefinition Width="200" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock
+                                FontFamily="Microsoft PhagsPa"
+                                FontSize="18"
+                                FontWeight="Black"
+                                Foreground="#FFEDBD3A"
+                                Text="Dashboard" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Margin="0,-9,0,0"
+                                FontFamily="Microsoft PhagsPa"
+                                FontSize="15"
+                                FontWeight="Regular"
+                                Foreground="White"
+                                Text="Country:" />
+                            <ComboBox
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                Height="30"
+                                Margin="0,-47,0,0"
+                                HorizontalAlignment="Stretch"
+                                Background="#161517"
+                                BorderThickness="0" />
+                            <TextBlock
+                                Grid.Row="2"
+                                Margin="0,-9,0,0"
+                                FontFamily="Microsoft PhagsPa"
+                                FontSize="15"
+                                FontWeight="Regular"
+                                Foreground="White"
+                                Text="Region:" />
+                            <ComboBox
+                                Grid.Row="2"
+                                Grid.Column="1"
+                                Height="30"
+                                Margin="0,-47,0,0"
+                                HorizontalAlignment="Stretch"
+                                Background="#161517"
+                                BorderThickness="0" />
+                            <TextBlock
+                                Grid.Row="3"
+                                Margin="0,-9,0,0"
+                                FontFamily="Microsoft PhagsPa"
+                                FontSize="15"
+                                FontWeight="Regular"
+                                Foreground="White"
+                                Text="Package:" />
+                            <ComboBox
+                                Grid.Row="3"
+                                Grid.Column="1"
+                                Height="30"
+                                Margin="0,-47,0,0"
+                                HorizontalAlignment="Stretch"
+                                Background="#161517"
+                                BorderThickness="0" />
+                            <Button
+                                Grid.Row="4"
+                                Grid.Column="0"
+                                Grid.ColumnSpan="2"
+                                HorizontalAlignment="Stretch"
+                                Background="#15BD6F"
+                                BorderThickness="0"
+                                Content="Apply AIRAC"
+                                FontFamily="Microsoft PhagsPa"
+                                FontWeight="Bold"
+                                Foreground="#fff" />
+                            <CheckBox
+                                Grid.Row="1"
+                                Grid.Column="3"
+                                Margin="0,-46,20,0"
+                                HorizontalAlignment="Right"
+                                FontFamily="Microsoft PhagsPa"
+                                Foreground="White" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="4"
+                                Margin="0,-9,0,0"
+                                FontFamily="Microsoft PhagsPa"
+                                FontSize="15"
+                                FontWeight="Regular"
+                                Foreground="White"
+                                Text="Some Setting" />
+                            <CheckBox
+                                Grid.Row="2"
+                                Grid.Column="3"
+                                Margin="0,-46,20,0"
+                                HorizontalAlignment="Right"
+                                FontFamily="Microsoft PhagsPa"
+                                Foreground="White" />
+                            <TextBlock
+                                Grid.Row="2"
+                                Grid.Column="4"
+                                Margin="0,-9,0,0"
+                                FontFamily="Microsoft PhagsPa"
+                                FontSize="15"
+                                FontWeight="Regular"
+                                Foreground="White"
+                                Text="Some Setting" />
+                        </Grid>
+                    </TabItem>
+                    <TabItem Header="Settings" Visibility="Collapsed">
+                        <TextBlock
+                            FontFamily="Microsoft PhagsPa"
+                            FontSize="18"
+                            FontWeight="Black"
+                            Foreground="#FFEDBD3A"
+                            Text="Settings" />
+                    </TabItem>
+                </TabControl>
+            </Grid>
+            <Border
+                Grid.Column="1"
+                Margin="11,10,10,10"
+                Background="#FF141215"
+                BorderBrush="#FF29242B"
+                BorderThickness="1"
+                CornerRadius="20">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="79*" />
+                        <RowDefinition Height="295*" />
+                        <RowDefinition Height="74*" />
+                    </Grid.RowDefinitions>
+                    <Image
+                        Height="58"
+                        Margin="9,0,9,0"
+                        VerticalAlignment="Center"
+                        RenderOptions.BitmapScalingMode="HighQuality"
+                        Source="/Views/ToolScope Banner.png" />
+                    <StackPanel
+                        Grid.Row="1"
+                        Height="116"
+                        VerticalAlignment="Center">
+                        <Button
+                            Grid.Row="1"
+                            Width="162"
+                            Height="48"
+                            Margin="0,5,0,5"
+                            Background="#FF141215"
+                            BorderBrush="{Binding Background, ElementName=stackPanel}"
+                            Command="{Binding ChangeTabCommand}"
+                            CommandParameter="0">
+                            <StackPanel x:Name="stackPanel" Orientation="Horizontal">
+                                <Image
+                                    Width="20"
+                                    HorizontalAlignment="Left"
+                                    VerticalAlignment="Center"
+                                    RenderOptions.BitmapScalingMode="HighQuality"
+                                    Source="/Views/settings.png" />
+                                <TextBlock
+                                    Margin="20,0,0,0"
+                                    HorizontalAlignment="Left"
+                                    VerticalAlignment="Center"
+                                    FontFamily="Microsoft PhagsPa"
+                                    FontSize="16"
+                                    FontWeight="Bold"
+                                    Foreground="White"
+                                    Text="Dashboard" />
+                            </StackPanel>
+                        </Button>
+                        <Button
+                            Grid.Row="1"
+                            Width="162"
+                            Height="48"
+                            Margin="0,5,0,5"
+                            Background="#FF141215"
+                            BorderBrush="{Binding Background, ElementName=stackPanel}"
+                            Command="{Binding ChangeTabCommand}"
+                            CommandParameter="1">
+                            <StackPanel Orientation="Horizontal">
+                                <Image
+                                    Width="20"
+                                    HorizontalAlignment="Left"
+                                    VerticalAlignment="Center"
+                                    RenderOptions.BitmapScalingMode="HighQuality"
+                                    Source="/Views/settings.png" />
+                                <TextBlock
+                                    Margin="20,0,0,0"
+                                    HorizontalAlignment="Left"
+                                    VerticalAlignment="Center"
+                                    FontFamily="Microsoft PhagsPa"
+                                    FontSize="16"
+                                    FontWeight="Bold"
+                                    Foreground="White"
+                                    Text="Settings" />
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
+
+                </Grid>
             </Border>
         </Grid>
     </Border>
